lessons/280/7-gateway-api-canary/2-service-v1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: order-v1
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: order-v1
