lessons/280/7-gateway-api-canary/4-service-v2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: order-v2
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: order-v2
