lessons/280/7-gateway-api-canary/5-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: order
spec:
  parentRefs:
  - name: main
  hostnames: ["order.example.com"]
  rules:
  - backendRefs:
    - name: order-v1
      port: 8080
      weight: 90
    - name: order-v2
      port: 8080
      weight: 10
